# pon

./: .gitignore  LICENSE  README.md  upload_iap_screenshots.py
ios/: API_METADATA_SETUP.md  APP_STORE_SUBMISSION_FIX.md  Configuration.storekit  EXECUTION_SUMMARY.md  FINAL_SUBMISSION_CHECKLIST.md  IAP_CREATION_AND_RESUBMISSION.md  PON_IAP_REJECTION_FIX_SUMMARY.md  RESUBMISSION_README.md  SUBMISSION_STATUS_2026_04_06.md  WEB_UI_STEP_BY_STEP.md  project.yml  verify_iap_setup.py
ios/Pon/: Info.plist
ios/Pon.xcodeproj/: project.pbxproj
ios/Pon/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/Pon/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Pon/Sources/: AIContractGenerator.swift  AIContractGeneratorView.swift  CelebrationEffect.swift  ContentView.swift  Contract.swift  ContractDetailView.swift  ContractListView.swift  ContractShareSheet.swift  ContractSyncManager.swift  ContractTemplate.swift  HomeView.swift  NewContractView.swift  PonApp.swift  ProGateView.swift  ReportView.swift  SeedData.swift  SettingsView.swift  SignatureView.swift  SoundPlayer.swift  SubscriptionManager.swift  TemplatePickerView.swift
ios/fastlane/metadata/en-US/: description.txt  keywords.txt  name.txt  release_notes.txt  subtitle.txt
ios/fastlane/metadata/ja/: description.txt  keywords.txt  name.txt  privacy_url.txt  release_notes.txt  subtitle.txt  support_url.txt
server/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
server/.github/workflows/: deploy.yml
server/src/: db.rs  main.rs  templates_data.rs
(+1 files in other folders)
